--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-# Google API Key for Gemini LLM and embeddings
 GOOGLE_API_KEY=your_google_api_key_here
+PINECONE_API_KEY=your_pinecone_api_key_here
